# BindingRMSD

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  env.yaml  inference.py  pyproject.toml  setup.py
.ipynb_checkpoints/: inference-checkpoint.py
bindingrmsd/: inference.py
bindingrmsd/data/: data.py  ligand_atom_feature.py  utils.py
bindingrmsd/model/: GatedGCNLSPE.py
data/: data.py  data_bck.py  protein_atom_feature.py
data/.ipynb_checkpoints/: data-checkpoint.py
example/: ligs.sdf  result.csv  result.tsv  run.sh  run_binding_rmsd.sh  run_rmsd.sh
model/: GatedGCNLSPE.py  model.py
model/.ipynb_checkpoints/: GraphGPS-checkpoint.py  GraphTransformer-checkpoint.py  MHA-checkpoint.py  model-checkpoint.py
